# cvnp

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  conanfile.txt  conanfile_pybind_only.txt  cv_np_shared_cast.cpp  cv_np_shared_cast.h  cv_np_shared_test_helper.cpp  cv_np_synonyms.cpp  cv_np_synonyms.h  pydef_cv_np.cpp  requirements.txt
.github/workflows/: ubuntu.yml
cvnp/: cvnp.cpp  cvnp.h  cvnp_shared_mat.h  cvnp_synonyms.cpp  cvnp_synonyms.h  cvnp_test_helper.cpp  pydef_cvnp.cpp
include/cvnp/: cvnp.h
main/: cv_np_main.cpp  cvnp_main.cpp  cvnp_test_helper.cpp
src/: cvnp_test_helper.cpp  pydef_cvnp.cpp
tests/: test_cv_np_shared_cast.py  test_cvnp.py  test_cvnp_cpp.cpp  test_non_shared.py
